--- a/src/index.css
+++ b/src/index.css
@@ -41,9 +41,15 @@ nav > a.active{
 
 /* Fonts Link */
 @import url('https://fonts.googleapis.com/css2?family=Syncopate:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 .root-font{
   font-family: "Syncopate", sans-serif;
   font-weight: 400;
+  font-style: normal;
+}
+
+.playfair-font {
+  font-family: "Playfair Display", serif;
   font-style: normal;
 }
